--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@radix-ui/react-tooltip": "1.0.5",
     "@upstash/redis": "^1.35.6",
     "@vercel/analytics": "^1.2.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -75,6 +76,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^30.2.0",
+    "@types/axios": "^0.9.36",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.8.1",
     "@types/react": "^18.3.5",
